# aws-util

./: .gitignore  CHANGELOG.md  Pipfile  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: coverage.yml  mutation.yml  publish.yml  pylint.yml  test.yml  unitTest.yml
coverage/gremlins/: history.json  index.html
docs/: serverless_utilities_research.md
src/: __init__.py  parameter_store.py  placeholder.py  secrets_manager.py
src/aws_util/: __init__.py  _async_wrap.py  _client.py  acm.py  ai_ml_pipelines.py  api_gateway.py  athena.py  bedrock.py  blue_green.py  cloudformation.py  cloudwatch.py  cognito.py  comprehend.py  config_loader.py  config_state.py  container_ops.py  cost_governance.py  cost_optimization.py  credential_rotation.py  cross_account.py  data_flow_etl.py  data_lake.py  data_pipeline.py  database_migration.py  deployer.py  deployment.py  disaster_recovery.py  dynamodb.py  ec2.py  ecr.py  ecs.py  event_orchestration.py  event_patterns.py  eventbridge.py  exceptions.py  firehose.py  glue.py  iam.py  infra_automation.py  kinesis.py  (+28 more)
src/aws_util.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/aws_util/aio/: _engine.py  acm.py  ai_ml_pipelines.py  api_gateway.py  athena.py  bedrock.py  blue_green.py  cloudformation.py  cloudwatch.py  cognito.py  comprehend.py  config_loader.py  config_state.py  container_ops.py  cost_governance.py  cost_optimization.py  credential_rotation.py  cross_account.py  data_flow_etl.py  data_lake.py  data_pipeline.py  database_migration.py  deployer.py  deployment.py  disaster_recovery.py  dynamodb.py  ec2.py  ecr.py  ecs.py  event_orchestration.py  event_patterns.py  eventbridge.py  firehose.py  glue.py  iam.py  infra_automation.py  kinesis.py  kms.py  lambda_.py  lambda_middleware.py  (+25 more)
tests/: test_acm.py  test_ai_ml_pipelines.py  test_aio_acm.py  test_aio_api_gateway.py  test_aio_athena.py  test_aio_bedrock.py  test_aio_cloudformation.py  test_aio_cloudwatch.py  test_aio_cognito.py  test_aio_comprehend.py  test_aio_credential_rotation.py  test_aio_data_lake.py  test_aio_database_migration.py  test_aio_disaster_recovery.py  test_aio_dynamodb.py  test_aio_ec2.py  test_aio_ecr.py  test_aio_ecs.py  test_aio_engine.py  test_aio_event_patterns.py  test_aio_eventbridge.py  test_aio_firehose.py  test_aio_glue.py  test_aio_iam.py  test_aio_kinesis.py  test_aio_kms.py  test_aio_lambda_.py  test_aio_modules.py  test_aio_parameter_store.py  test_aio_rds.py  test_aio_rekognition.py  test_aio_route53.py  test_aio_s3.py  test_aio_secrets_manager.py  test_aio_ses.py  test_aio_sns.py  test_aio_sqs.py  test_aio_stepfunctions.py  test_aio_sts.py  test_aio_textract.py  (+39 more)
