[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aws-util"
version = "0.4.0"
description = "A utility library for common AWS services"
readme = "README.md"
authors = [{ name = "Masrik Dahir", email = "info@masrikdahir.com" }]
requires-python = ">=3.10"
dependencies = [
    "boto3",
    "pydantic>=2.0",
    "cryptography>=42.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Intended Audience :: Developers",
]

[project.optional-dependencies]
dev = [
    "build",
    "twine",
    "taskipy",
    "pytest",
    "pytest-cov",
    "black",
    "ruff",
    "mypy",
    "boto3-stubs[s3,sqs,sns,dynamodb,ssm,secretsmanager,lambda,cloudwatch,logs,sts,events,kms,ec2,rds,ecs,ecr,iam,cognito-idp,route53,acm,stepfunctions,cloudformation,kinesis,firehose,ses,glue,athena,bedrock-runtime,bedrock,rekognition,textract,comprehend,translate]",
    "moto[s3,sqs,sns,dynamodb,ssm,secretsmanager,lambda,cloudwatch,logs,sts,events,kms,ec2,rds,ecs,ecr,iam,cognito-idp,route53,acm,stepfunctions,cloudformation,kinesis,firehose,ses,glue,athena]",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"] # Ignore line-length if you prefer

[tool.taskipy.tasks]
install      = "pip install -e .[dev]"
clean        = "python -c \"import shutil, glob; [shutil.rmtree(p, ignore_errors=True) for p in ['dist','build']+glob.glob('src/*.egg-info')]\""
build        = "task clean && python -m build"
bump         = "python -c \"import re; from pathlib import Path; p = Path('pyproject.toml'); content = p.read_text(); v = re.search(r'version = \\\"(\\d+)\\.(\\d+)\\.(\\d+)\\\"', content); major, minor, patch = map(int, v.groups()); new_v = f'{major+1}.0.0' if 'major' in '$npm_config_argv' or 'major' in '{{args}}' else f'{major}.{minor+1}.0'; p.write_text(re.sub(r'version = \\\".*?\\\"', f'version = \\\"{new_v}\\\"', content)); print(f'Bumped to {new_v}')\""
publish       = "task bump minor && task build && python -m twine upload dist/*"
"publish:major" = "task bump major && task build && python -m twine upload dist/*"
"publish:minor" = "task publish"
publish-test = "task build && python -m twine upload --repository testpypi dist/*"
test         = "pytest tests/ -v"
test-cov     = "pytest tests/ -v --cov=src/aws_util --cov-report=term-missing"
lint         = "ruff check --fix src/"
format       = "black src/"
typecheck    = "mypy src/aws_util/"
release      = "task lint && task test && task publish"
coverage      = "pytest --cov=src/ --cov-report=term-missing"

[tool.setuptools.packages.find]
where = ["src"]
